Kolan/wwwroot/scss/board.scss
@import "./common";

body {
    overflow-y: scroll;
}

main {
    display: grid;
    grid-template-rows: 75px calc(100% - 75px);
    overflow: hidden;
}

header {
    display: flex;
    font-family: 'Inter', sans-serif;
    padding: 15px;
    border-bottom: 2px solid $gray;
    box-sizing: border-box;

    #title {
        position: relative;
        display: inline-block;
        font-size: 2em;
        font-weight: 400;

        a {
            max-width: 100px;
        }

        a:visited {
            color: blue;
        }

        a, span {
            display: inline-block;
            font-size: 0.8em;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            margin-bottom: -3px;
        }

        span {
            max-width: 50vw;
            margin-bottom: -4px;
        }
    }

    .right {
        display: inline-block;
        height: 100%;
        margin-left: auto;
        margin-right: 10px;

        .icon {
            cursor: pointer;
            margin-left: 5px;
            font-size: 38px;
        }
    }
}

.content {
    width: 100vw;
    overflow-x: auto;
}

.tasklists {
    position: relative;
}

.tasklists, .list-head {
    display: grid;
    width: calc(100vw - 10px);
    font-family: "Inter", sans-serif;
    grid-template-columns: repeat(4, 1fr);
}

tasklist, .list-head .item {
    min-width: 300px;
}

.list-head .item {
    border-right: 2px solid $gray;
    height: 50px;
    padding-right: 10px;
    box-sizing: border-box;
    text-align: center;
    line-height: 50px;
    border-bottom: 2px solid $gray;
}

tasklist {
    min-height: calc(100vh - 144px);
    border-right: 2px solid $gray;
    box-sizing: border-box;
    overflow: hidden;
}

.plus {
    display: inline-block;
    float: right;
    font-family: sans-serif;
    font-size: 30px;
    font-weight: 100;
    color: black;
    text-align: right;
    cursor: pointer;
}

placeholder {
    display: none;
}

placeholder {
    display: none;
    padding: 17px;
    border: 3px dashed black;
    border-radius: 9px;
    z-index: 9;
    margin: 20px;
}

draggable-item {
    display: block;
    position: relative;
    font-family: "Inter", sans-serif;
    padding: 20px;
    padding-right: 30px;
    background-color: $primary;
    border-radius: 9px;
    color: white;
    margin: 12px;
    overflow: hidden;
    cursor: grabbing;

    &:hover {
        filter: brightness(92%);
    }

    a {
        color: white;
        cursor: text;
    }

    h2 {
        display: inline-block; // to force it to be only the size of the text
        font-size: 1.2em;
        cursor: text;
    }

    .description {
        word-wrap: break-word;
        cursor: text;
    }

    .description > *:first-child {
        margin-top: 0;
    }

    .assignee {
        position: absolute;
        bottom: 9px;
        right: 45px;
    }

    .deadline {
        position: absolute;
        bottom: 9px;
        left: 15px;
        font-size: 0.8em;
    }

    .content {
        position: relative;
        width: 100%;
        height: 100%;
        z-index: 100;
    }

    .overdue-icon {
        display: none;
    }

    .overlay {
        display: none;
        position: absolute;
        width: 100%;
        height: 100%;

        top: 0;
        left: 0;
        z-index: 99;
        cursor: pointer;
    }

    .overlay-button {
        position: absolute;
        font-size: 21px;
        margin: 16px;
        cursor: pointer;
    }

    .top-left {
        top: -6px;
        left: -4px;
    }

    .top-right {
        right: 0;
    }

    .bottom-right {
        right: 0;
        bottom: 0;
    }
}

draggable-item.overdue {
    background-color: #D32F2F;

    .overdue-icon {
        display: block;
    }
}

#uiBlocker {
    display: none;
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    opacity: 0;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 999998;

    transition: .3s ease opacity;
}

@media screen and (max-width: 1000px) {
    #list-head, .tasklists {
        display: block;
        width: 100%;
    }

    #list-head > .item.selected {
        background-color: #D3D3D3;
    }

    .draggableContainer {
        display: none;
    }

    draggable-item .overlay {
        display: block !important; // !important, to keep *always* display it. The JavaScript should not be able to affect this.
    }
}

@media screen and(min-width: 1000px) {
    .draggableContainer {
        display: block !important; // !important, to override any javascript
    }
}

